[project]
name = "street-view-house-numbers"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.2.0",
    "ipympl>=0.10.0",
    "loguru>=0.7.3",
    "matplotlib>=3.10.8",
    "optuna>=4.7.0",
    "ray[tune]>=2.54.0",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
    "torch>=2.10.0",
    "torchinfo>=1.8.0",
    "torchmetrics>=1.9.0",
    "torchvision>=0.25.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.6",
]
